tests/spec/fail/map_has_non_string_key.aja
m = {"a": 1}
print(m.has(1))
